<resources>
    <string name="app_name">VCMovies</string>
    <string name="pesquisar_por">Pesquisar por:</string>
    <string name="titulo">Título:</string>
    <string name="ano_opcional">Ano: (Opcional)</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="titulo_nao_encontrado">Título não encontrado!</string>
    <string name="muitos_resultados_encontrados">Muitos resultados encontrados, por favor, refinar a pesquisa!</string>
    <string name="serie_nao_encontrada">Série não encontrada!</string>
    <string name="um_erro_inesperado_ocorreu">Um erro inesperado ocorreu!</string>
    <string name="ocorreu_um_erro">Ocorreu um erro, por favor, confira a sua internet!</string>
    <string name="resultado">resultado</string>
    <string name="resultados">resultados</string>
    <string name="lista">Lista</string>
    <string name="informacoes">Informações</string>


    <!--  Linha_resultado  -->
    <string name="res_titulo">Título:</string>
    <string name="res_ano">Ano:</string>
    <string name="res_imdbID">ImdbID:</string>
    <string name="res_categoria">Categoria:</string>
    <string name="res_teste">Teste</string>

    <!--  Lista_fragment  -->
    <string name="lista_teste">Teste</string>
    <string name="lista_voltar">Voltar\u0020</string>
    <string name="lista_avancar">Avançar</string>
    <string name="lista_paginas">1/1</string>
    <string name="lista_resultados">0 resultado</string>

    <!--  Informacoes fragment  -->
    <string name="info_1">Aplicativo desenvolvido por:</string>
    <string name="info_2">Guilherme Resende Magro</string>

    <string name="info_3">Objetivo:</string>
    <string name="info_4">Teste para ValeCard</string>

    <string name="info_5">Tecnologias utilizadas:</string>
    <string name="info_6">Retrofit v.2.6.2</string>
    <string name="info_9">Picasso v2.71828</string>

    <string name="info_7">API utilizada:</string>
    <string name="info_8">http://www.omdbapi.com</string>

    <string-array name="array_cidades">
        <item>Todos</item>
        <item>Filme</item>
        <item>Série</item>
        <item>Episódio</item>
        <item>Jogo</item>
    </string-array>
</resources>
