<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:text="@string/pesquisar_por"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spn_categoria_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:minHeight="40sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"/>

    <EditText
        android:id="@+id/edt_titulo_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ano_opcional"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"/>

    <EditText
        android:id="@+id/edt_ano_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="4" />

    <Button
        android:id="@+id/btn_pesquisar_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80sp"
        android:layout_marginEnd="80sp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/pesquisar"
        android:textColor="@color/tabtextcolor" />

</LinearLayout>